# mprpc_for_dl

./: 2025-6-29-log.txt  2025-7-1-log.txt  CMakeLists.txt
example/: friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice_test.cc  calluserservice.cc
lib/include/: lockqueue.h  logger.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: main  main.cc  test.pb.cc  test.pb.h  test.proto
